# CPP-Utils

./: .gitignore  CMakeLists.txt  README.md
include/: util.h
src/: util.cpp
